tests/should-fail/wrong-type-of-import.ls
import std;

main = map + 10;
